--- a/Maxim_Vorobiev/src/css/styles.css
+++ b/Maxim_Vorobiev/src/css/styles.css
@@ -1,6 +1,19 @@
-.react-messenger__layout {
+.react-messenger__wrapper {
+    display: flex;
+    width: 100%;
     height: 100%;
-    width: 50%;
+}
+
+.react-messenger__header {
+    color: #333333;
+}
+
+.react-messenger__chatlist {
+    width: 30%;
+}
+
+.react-messenger__message-field {
+    width: 100%;
     margin: auto;
     display: flex;
     align-items: center;
@@ -8,7 +21,7 @@
     flex-direction: column;
 }
 
-.react-messenger__messages-list {
+.react-messenger__messages {
     display: flex;
     flex-direction: column;
     background-color: #e2e2e2;
@@ -16,6 +29,7 @@
     width: 100%;
     padding: 20px;
     overflow-y: scroll;
+    box-sizing: border-box;
 }
 
 .react-messenger__message {
