--- a/Roman_Beknazarov/src/styles/styles.css
+++ b/Roman_Beknazarov/src/styles/styles.css
@@ -1,21 +1,46 @@
-.message-field {
-    display: flex;
-    flex-direction: column;
-    background-color: #e2e2e2;
-    height: 50%;
-    width: 100%;
-    padding: 20px;
-    overflow-y: scroll;
+.header {
+    padding: 30px 0;
 }
 
-.layout {
-    height: 100%;
-    width: 50%;
-    margin: auto;
+.logo {
+    padding: 0 50px;
+    font-size: 24px;
+    color: rgb(0, 188, 212);
+    text-decoration: none;
+}
+
+.main {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.ChatList {
+    width: 30%;
+    text-transform: capitalize;
+}
+
+.chat {
+    font-size: 20px;
+}
+
+.message-field {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    height: 100%;
+    width: 70%;
+}
+
+.messages {
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    height: 50%;
+    width: 100%;
+    padding: 20px;
+    background-color: #e2e2e2;
+    overflow-y: scroll;
 }
 
 .message {
@@ -24,6 +49,11 @@
     border-radius: 20px;
     font-size: 18px;
     margin: 5px;
+}
+
+.user-message {
+    display: flex;
+    width: 100%;
 }
 
 .message-sender {
