--- a/Anna_Puchkova/src/styles/styles.css
+++ b/Anna_Puchkova/src/styles/styles.css
@@ -1,67 +1,108 @@
-.message-field {
-    display: flex;
-    flex-direction: column;
-    background-color: #e2e2e2;
-    height: 50%;
-    width: 100%;
-    padding: 20px;
-    overflow-y: scroll;
-    box-sizing: border-box;
- }
- 
- .layout {
-    height: 100%;
-    width: 70%;
-    margin: auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-
- }
- .wrapper {
-     background-color: ;
-     height: 100%;
-     width: 50%;
-     display: flex;
-     flex-direction: row;
-     box-sizing: border-box;
-     margin: auto;
-     justify-content: space-between;
- }
- .message {
-    background-color: rgb(239, 243, 245);
-    padding: 5px 15px;
-    border-radius: 20px;
-    font-size: 18px;
-    margin: 5px;
-    align-self: flex-end;
-
- }
- .messageRobot {
-    background-color: lightblue;
-    align-self: flex-start;
- }
- .message-sender {
-    color: gray;
-    font-size: 14px;
- }
- 
-.headerClass {
-    height: 50px;
-    width: 50%;
-    margin: auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    background-color: lightblue;
-    color: rgb(68, 67, 67);
-    font-size: 22px;
-    font-weight: bold;
+body {
+   height: 100%;
+   margin: 0;
 }
-.chatList {
- 
-    height: 100%;
-    width: 30%;
+
+#root {
+   height: 100%;
+}
+ .txt-field {
+   width: 100%;
+   display: flex;
+ }
+
+ .message-sender {
+   color: gray;
+   font-size: 14px;
+}
+.message {
+   background-color: rgb(239, 243, 245);
+   padding: 5px 15px;
+   border-radius: 20px;
+   font-size: 18px;
+   margin: 5px;
+   align-self: flex-end;
+}
+.messageRobot {
+   background-color: lightblue;
+   align-self: flex-start;
+}
+.layout {
+   height: 100%;
+   width: 50%;
+   margin: auto;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   flex-direction: column;
+}
+.message-field {
+   display: flex;
+   flex-direction: column;
+   background-color: #e2e2e2;
+   height: 50%;
+   width: 100%;
+   padding: 20px;
+   overflow-y: scroll;
+}
+.layout {
+   height: 100%;
+   width: 50%;
+   margin: 40px auto;
+   display: flex;
+   align-items: center;
+   flex-direction: column;
+}
+.layout h1 {
+   font-size: 30px;
+   color: gray;
+}
+.layout-canvas {
+   height: 60%;
+   width: 100%;
+   display: flex;
+}
+
+.layout-left-side {
+   height: 100%;
+   width: 30%;
+   background-color: rgb(210, 238, 247);
+}
+
+.layout-right-side {
+   height: 100%;
+   width: 70%;
+}
+.header {
+   width: 50%;
+   height: 40px;
+   font-size: 22px;
+   font-weight: bold; 
+   display: flex;
+   align-items: center;
+   flex-direction: row;
+   justify-content: space-between;
+   align-self: flex-end;
+}
+.profileLink {
+   margin: 0 10px 0 0;
+   color: gray;
+   display: flex;
+   align-items: center;
+   text-decoration: none;;
+}
+.profileAvatar {
+   margin: 0 10px 0 0;
+   color: blue;
+}
+.listLink {
+   text-decoration: none;
+}
+.backLink {
+color: white;
+text-decoration: none;
+background-color: #66D7E5;
+font-size: 20px;
+padding: 5px 10px;
+border-radius: 5px;
 }
