--- a/Vladislav Ovinkin/src/components/MessageList/MessageList.css
+++ b/Vladislav Ovinkin/src/components/MessageList/MessageList.css
@@ -1,6 +1,8 @@
 .messageList {
     background-color: #ddd;
-    padding: 10px;
+    padding: 20px;
     margin: 5px;
     border-radius: 5px;
+    display: flex;
+    flex-direction: column;
 }
