--- a/Vladislav Ovinkin/src/components/Message/Message.css
+++ b/Vladislav Ovinkin/src/components/Message/Message.css
@@ -1,11 +1,11 @@
 .message {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: #fdb;
     padding: 5px;
     border-radius: 10px;
     box-shadow: 1px 1px 3px #555;
     width: 40%;
     align-self: flex-end;
-    font-family: Arial, sans-serif;
 }
 .message--robot {
     align-self: flex-start;
