--- a/Vladislav Ovinkin/src/components/MessageList/MessageList.css
+++ b/Vladislav Ovinkin/src/components/MessageList/MessageList.css
@@ -1,7 +1,7 @@
 .messageList {
     background-color: #ddd;
     padding: 20px;
-    margin: 5px;
+    margin-left: 15px;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
