--- a/Anna_Puchkova/src/styles/styles.css
+++ b/Anna_Puchkova/src/styles/styles.css
@@ -98,6 +98,12 @@ body {
 .listLink {
    text-decoration: none;
 }
+.listLink:active {
+   font-weight: bold;
+}
+.activeChat {
+   font-weight: bold;
+}
 .backLink {
 color: white;
 text-decoration: none;
