Сделал сброс таймера для бота, и немного оформил

--- a/Alexey_Bobkov/1-src/components/ChatForm/ChatForm.sass
+++ b/Alexey_Bobkov/1-src/components/ChatForm/ChatForm.sass
@@ -1,3 +1,14 @@
 .ChatForm
+    margin: 15px
+    width: 100%
     display: flex
     justify-content: center
+    
+    .MuiTextField-root
+        margin:  15px
+
+    .MuiButton-root
+        margin: 5px
+        padding: 5px
+        height: 50%
+        align-self: center
