--- a/Alexey_Bobkov/1-src/components/Message/Message.sass
+++ b/Alexey_Bobkov/1-src/components/Message/Message.sass
@@ -1,7 +1,7 @@
 .Message
     background-color: #6fa9eb
-    margin: 5px
-    padding: 3px
+    margin: 5px 15px 5px 15px
+    padding: 10px
     align-self: flex-end
     border-radius: 3px
     
