--- a/Alexey_Bobkov/1-src/components/MessageField/MessageField.sass
+++ b/Alexey_Bobkov/1-src/components/MessageField/MessageField.sass
@@ -2,4 +2,7 @@
     display: flex
     flex-direction: column
     background-color: #94c0f1
-    padding: 15px
+    
+    width: 70%
+    align-self: flex-end
+    
