Перенёс стили в отдельные файлы.

--- a/Roman_Beknazarov/src/components/MessageField/MessageField.css
+++ b/Roman_Beknazarov/src/components/MessageField/MessageField.css
@@ -1,28 +1,3 @@
-.header {
-    padding: 30px 0;
-}
-
-.logo {
-    padding: 0 50px;
-    font-size: 24px;
-    color: rgb(0, 188, 212);
-    text-decoration: none;
-}
-
-.main {
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.ChatList {
-    width: 30%;
-    text-transform: capitalize;
-}
-
-.chat {
-    font-size: 20px;
-}
-
 .message-field {
     display: flex;
     align-items: center;
@@ -59,4 +34,8 @@
 .message-sender {
     color: gray;
     font-size: 14px;
+}
+
+.message-input {
+    font-size: 22px;
 }
