Ольга Заглавнова. ReactJS Lesson4. Не до конца сделано только добавление нового чата - почему-то при добавлении еще одного предыдущий не сохраняется. Нужно время, чтобы разобраться.

--- a/Olga_Zaglavnova/Lesson3/src/components/ChatList/ChatList.css
+++ b/Olga_Zaglavnova/Lesson3/src/components/ChatList/ChatList.css
@@ -1,4 +1,25 @@
 .ChatList{
     flex-basis: 30%;
     border: 1px solid darkgray;
+    position: absolute;
+    top: 100px;
+    left: 0px;
+    width: 30%;
+    height: 500px;
+    overflow-y: auto;
+}
+.ChatList__addBtn{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color:silver;
+    color: black;
+    font-size: 25px;
+    line-height: 30px;
+    font-weight: 900;
+    text-align: center;
+    margin: 10px auto;
+}
+.ChatList__a{
+    text-decoration: none;
 }
