--- a/Olga_Zaglavnova/Lesson3/src/components/Header/Header.css
+++ b/Olga_Zaglavnova/Lesson3/src/components/Header/Header.css
@@ -2,9 +2,25 @@
     flex-shrink: 0;
     flex-grow: 1;
     flex-basis: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
     height: 100px;
     background-color: darkgray;
     color: white;
     font-size: 24px;
     padding: 5%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
+.Header__avatar{
+    margin-right: 20px;
+    background-color: white;
+}
+.Header__name{
+    display: flex;
+    height: 50px;
+    line-height: 50px;
 }
