--- a/Olga_Zaglavnova/Lesson3/src/components/NewMessage/NewMessage.css
+++ b/Olga_Zaglavnova/Lesson3/src/components/NewMessage/NewMessage.css
@@ -15,6 +15,7 @@
 .newMessageForm__nameInput{
     width: 30%;
     padding: 5px;
+    font-weight: bold;
 }
 .newMessageForm__messageInput{
    /* width: 70%;*/
