--- a/Olga_Zaglavnova/Lesson3/src/containers/Layout/Layout.css
+++ b/Olga_Zaglavnova/Lesson3/src/containers/Layout/Layout.css
@@ -4,4 +4,15 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: relative;
+}
+.Layout__index{
+    position: absolute;
+    top: 100px;
+    left: 30%;
+    height: 500px;
+    width: 70%;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 20px;
 }
