--- a/Maxim_Vorobiev/src/js/components/ChatList/ChatList.css
+++ b/Maxim_Vorobiev/src/js/components/ChatList/ChatList.css
@@ -1,3 +1,9 @@
 .react-messenger__chatlist {
     width: 30%;
 }
+
+.react-messenger__chatlist-link,
+.react-messenger__chatlist-link:hover {
+    text-decoration: none;
+    color: #000000;
+}
