--- a/Ekaterina_Kirilenko/src/components/MessageField/MessageField.css
+++ b/Ekaterina_Kirilenko/src/components/MessageField/MessageField.css
@@ -1,10 +1,9 @@
 .message-field {
   display: flex;
   flex-direction: column;
-  background-color:#eee;
-  box-sizing: border-box;  
+  box-sizing: border-box;
+  border-bottom: 1px solid #eee; 
   padding: 20px;
-  height: 50%;
   width: 100%;
   overflow-y: scroll;
 }
