--- a/Nikita_Golodnov/lesson_1/src/components/MessageField/MessageList.css
+++ b/Nikita_Golodnov/lesson_1/src/components/MessageField/MessageList.css
@@ -1,6 +1,8 @@
 .MessageList {
-    background-color: gray;
-    padding: 10px;
     display: flex;
     flex-direction: column;
+    background-color: #e2e2e2;
+    height: 50%;
+    padding: 20px;
+    /* overflow-y: scroll; */
 }
