--- a/Olga_Zaglavnova/Lesson3/src/components/AddChat/AddChat.css
+++ b/Olga_Zaglavnova/Lesson3/src/components/AddChat/AddChat.css
@@ -5,8 +5,14 @@
     width: 70%;
     height: 500px;
     padding: 20px;
+    border: 1px solid darkgray;
 }
 .AddChat__btn{
-    width: 50px;
+    width: 80px;
     height: 20px;
+    margin: 10px 70px;
+    border-radius: 3px;
+}
+.AddChat_nameInput{
+    margin-left: 10px;
 }
