--- a/Ekaterina_Kirilenko/src/components/MessageField/MessageField.css
+++ b/Ekaterina_Kirilenko/src/components/MessageField/MessageField.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   border-bottom: 1px solid #eee; 
   padding: 20px;
-  width: 100%;
+  width: 100%;  
+  height: 80vh;
   overflow-y: scroll;
 }
