--- a/Michel_Devichensky/src/components/Chat/Chat.css
+++ b/Michel_Devichensky/src/components/Chat/Chat.css
@@ -1,9 +1,10 @@
 .wrapper--container {
- /* height: 200px; */
- /* width: 300px; */
- display: flex;
- flex-direction: column;
- align-items: center;
+    height: 200px; 
+    width: 840px;
+    display: flex;
+    /* flex-direction: column; */
+    align-items: center;
+    flex-wrap: wrap;
 }
 .button{
     background:black;
