--- a/Michel_Devichensky/src/components/ChatForm/ChatForm.css
+++ b/Michel_Devichensky/src/components/ChatForm/ChatForm.css
@@ -1,19 +1,20 @@
 .ChatForm {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-end;
     background-color: black;
     padding: 18px; 
     border-top: 2px solid greenyellow; 
-    width: 384px;
+    width: 840px;
 }
 .ChatForm-input {
     background-color: black;
     border: 2px solid greenyellow;
     color: greenyellow;
     padding: 3px;
+    width: 375px;
 }
 .ChatForm-textarea {
-    padding: 1px;
+    padding: 3px;
     margin-top: 5px;
 }
