--- a/Michel_Devichensky/src/components/ChatList/ChatList.css
+++ b/Michel_Devichensky/src/components/ChatList/ChatList.css
@@ -1,10 +1,9 @@
-.MessageField {
-    display: flex;
+.ChatList {
     flex-direction: column;
     outline: 1px solid black;
     height: 200px;
     width: 400px;
     background-color: rgb(147, 255, 74);
     padding: 10px;
-    overflow: auto
+    overflow: auto;
 }
