--- a/Michel_Devichensky/src/components/Message/Message.css
+++ b/Michel_Devichensky/src/components/Message/Message.css
@@ -1,8 +1,8 @@
 .Message {
-    border: 1px solid greenyellow;
+    /* border: 1px solid greenyellow; */
     margin: 10px 0 10px 0;
     padding: 5px;
-    color: greenyellow;
+    color: rgb(87, 141, 0);
     /* align-self: left; */
     width: 170px;
 }
