--- a/Roman_Beknazarov/src/components/MessageField/MessageField.css
+++ b/Roman_Beknazarov/src/components/MessageField/MessageField.css
@@ -1,4 +1,4 @@
-.message-field {
+.MessageField {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -14,29 +14,13 @@
     box-sizing: border-box;
     height: 50%;
     width: 100%;
+    margin-bottom: 10px;
     padding: 20px;
     background-color: #e2e2e2;
     overflow-y: scroll;
 }
 
-.message {
-    background-color: lightblue;
-    padding: 5px 15px;
-    border-radius: 20px;
-    font-size: 18px;
-    margin: 5px;
-}
-
 .user-message {
     display: flex;
     width: 100%;
-}
-
-.message-sender {
-    color: gray;
-    font-size: 14px;
-}
-
-.message-input {
-    font-size: 22px;
 }
