--- a/Ekaterina_Kirilenko/src/components/Message/Message.css
+++ b/Ekaterina_Kirilenko/src/components/Message/Message.css
@@ -2,7 +2,7 @@
   background-color: lightskyblue;
   padding: 10px 20px;
   border-radius: 30px;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Roboto', sans-serif;
   width: 30%;
   align-self: flex-end;
   overflow-wrap: break-word;
