--- a/Anna_Tokareva/lesson_2/src/components/Header/Header.css
+++ b/Anna_Tokareva/lesson_2/src/components/Header/Header.css
@@ -4,4 +4,10 @@
   text-align: center;
   font-size: 20px;
   background-color: lightskyblue;
+  display: flex;
+}
+
+.profileLink {
+  color: inherit;
+  text-decoration: none;
 }
