+Профиль и вроде все.

--- a/Alexey_Bobkov/1-src/components/ChatList/ChatList.sass
+++ b/Alexey_Bobkov/1-src/components/ChatList/ChatList.sass
@@ -1,5 +1,14 @@
 .ChatList
     width: 30%
     background-color:  #bfd4ec
+    .MuiList-padding
+        padding: 0
     .MuiListItem-gutters
         padding: 5px
+    .MuiListItem-gutters:hover
+        background-color: #335070
+        
+        
+        
+
+        
