--- a/Alexey_Bobkov/1-src/components/MessageField/MessageField.sass
+++ b/Alexey_Bobkov/1-src/components/MessageField/MessageField.sass
@@ -1,8 +1,8 @@
 .MessageField
     display: flex
     flex-direction: column
-    background-color: #94c0f1
+    background-color: #9eb7d1
     
     width: 70%
-    align-self: flex-end
+    
     
