--- a/Alexey_Bobkov/1-src/components/ChatForm/ChatForm.sass
+++ b/Alexey_Bobkov/1-src/components/ChatForm/ChatForm.sass
@@ -1,9 +1,9 @@
 .ChatForm
-    margin: 15px
     width: 100%
     display: flex
     justify-content: center
-    
+    background-color: #cfe0f3
+ 
     .MuiTextField-root
         margin:  15px
 
@@ -12,3 +12,4 @@
         padding: 5px
         height: 50%
         align-self: center
+        
