--- a/Alexey_Bobkov/1-src/components/Header/Header.sass
+++ b/Alexey_Bobkov/1-src/components/Header/Header.sass
@@ -1,8 +1,22 @@
 .Header
+    display: flex
     height: 100px
     width: 100%
     background-color: #335070
     color: white
+    align-items: center
     h1
+        flex-grow: 9
         text-align: center
+    h3
+        font-size: 24px
+        font-weight: 400
+        text-align: right
+        padding-right: 10px
+        
+    
+        a
+            color: white
+
+        
         
