added profile component

--- a/Roman_Balashov/react_project/src/components/Header/Header.css
+++ b/Roman_Balashov/react_project/src/components/Header/Header.css
@@ -1,10 +1,15 @@
 .header {
     width: 100%;
-    text-align: center;
     border-top-right-radius: 7px;
     border-top-left-radius: 7px;
     background-color: #8ac2e6;
     border-bottom: 1px solid #FFFFFF;
     color: #FFF;
     margin: 0;
+    display: flex;
+    justify-content: flex-start;
+}
+.header__link {
+    margin-right: 10px;
+    text-decoration: none;
 }
