Начну ветку 5 урока на основе окончания 4-го

--- a/Vladislav Ovinkin/src/components/Header/Header.css
+++ b/Vladislav Ovinkin/src/components/Header/Header.css
@@ -1,4 +1,15 @@
 .header {
+    display: flex;
+    justify-content: space-between;
+}
+.header-text {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
+}
+
+.header-link {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
+    text-align: right;
+    align-self: center;
 }
