--- a/Roman_Beknazarov/src/components/Header/Header.css
+++ b/Roman_Beknazarov/src/components/Header/Header.css
@@ -1,10 +1,19 @@
 .header {
-    padding: 30px 0;
+    display: flex;
+    justify-content: space-between;
 }
 
 .logo {
     padding: 0 50px;
     font-size: 24px;
+    line-height: 62px;
     color: rgb(0, 188, 212);
+}
+
+header .MuiList-root {
+    display: flex;
+}
+
+header a {
     text-decoration: none;
 }
