--- a/Roman_Beknazarov/src/components/Layout/Layout.css
+++ b/Roman_Beknazarov/src/components/Layout/Layout.css
@@ -3,7 +3,24 @@ body {
     margin: 0;
 }
 
-.main {
+main h2 {
+    text-align: center;
+}
+
+.wrapper {
     display: flex;
     justify-content: space-evenly;
+    padding: 30px;
+}
+
+.wrapper .emptyBlock {
+    height: 100%;
+    width: 70%;
+    text-align: center;
+    font-size: 24px;
+    color: red;
+}
+
+.wrapper .ChatList a {
+    text-decoration: none;
 }
