--- a/Olga_Zaglavnova/Lesson3/src/components/Profile/Profile.css
+++ b/Olga_Zaglavnova/Lesson3/src/components/Profile/Profile.css
@@ -7,6 +7,7 @@
     overflow-y: auto;
     background-color: powderblue ;
     padding: 20px;
+    border: 1px solid darkgray;
 }
 .Profile__avatar{
     background-color: white;
