--- a/Anna_Puchkova/src/styles/styles.css
+++ b/Anna_Puchkova/src/styles/styles.css
@@ -92,7 +92,7 @@ body {
 }
 .profileAvatar {
    margin: 0 10px 0 0;
-   color: blue;
+   color: #3cc2d1;
 }
 .listLink {
    text-decoration: none;
