--- a/Serebrennikov_Vladimir/src/components/Message/Message.css
+++ b/Serebrennikov_Vladimir/src/components/Message/Message.css
@@ -1,6 +1,7 @@
 .Message {
+  display: inline;
   padding: 10px;
-  margin: 10px;
-  border-radius: 20px;
+  margin: 5px;
+  border-radius: 10px;
   background-color: aliceblue;
 }
