Redux DevTools connected component Profile added

--- a/Roman_Beknazarov/src/components/Layout/Layout.css
+++ b/Roman_Beknazarov/src/components/Layout/Layout.css
@@ -16,7 +16,10 @@ main h2 {
 .wrapper .emptyBlock {
     height: 100%;
     width: 70%;
-    text-align: center;
+    text-align: left;
+}
+
+.wrapper .emptyBlock h4 {
     font-size: 24px;
     color: red;
 }
