--- a/Olga_Zaglavnova/Lesson3/src/components/ChatList/ChatList.css
+++ b/Olga_Zaglavnova/Lesson3/src/components/ChatList/ChatList.css
@@ -7,6 +7,10 @@
     width: 30%;
     height: 500px;
     overflow-y: auto;
+    padding: 10px;
+}
+.ChatList__ul{
+    list-style-type: none;
 }
 .ChatList__addBtn{
     width: 30px;
@@ -14,10 +18,11 @@
     border-radius: 50%;
     background-color:silver;
     color: black;
-    font-size: 25px;
-    line-height: 30px;
+    font-size: 20px;
+    line-height: 25px;
     font-weight: 900;
     text-align: center;
+    display: block;
     margin: 10px auto;
 }
 .ChatList__a{
