По 5 дз вроде все.

--- a/Alexey_Bobkov/1-src/components/Profile/Profile.sass
+++ b/Alexey_Bobkov/1-src/components/Profile/Profile.sass
@@ -16,4 +16,8 @@
     flex-direction: column
     width: 70%
     text-align: center
-    
+
+ul
+    text-align: left
+    li
+        list-style-type: none 
