--- a/Roman_Beknazarov/src/components/Message/Message.css
+++ b/Roman_Beknazarov/src/components/Message/Message.css
@@ -1,6 +1,6 @@
 .Message {
     align-self: flex-end;
-    width: 30%;
+    width: 45%;
     padding: 5px 15px;
     border-radius: 20px;
     background: lightskyblue;
@@ -9,6 +9,10 @@
 
 .Message--robot {
     align-self: flex-start;
+}
+
+.Message--user {
+    text-align: right;
 }
 
 .Message:not(:last-child) {
