--- a/Anna_Tokareva/lesson_2/src/components/Message/Message.css
+++ b/Anna_Tokareva/lesson_2/src/components/Message/Message.css
@@ -1,9 +1,11 @@
 .Message {
+  position: relative;
   background-color: lightskyblue;
   padding: 5px;
   border-radius: 5px;
   width: 30%;
   align-self: flex-start;
+  overflow-wrap: break-word;
 }
 
 .Message:not(:last-child) {
@@ -12,4 +14,15 @@
 
 .Message--user {
   align-self: flex-end;
+}
+
+.DeleteIcon {
+  position: absolute;
+  top: 1px;
+  right: 1px;
+  display: none;
+}
+
+.DeleteIcon--user {
+  display: block;
 }
