--- a/Anna_Tokareva/lesson_2/src/components/Header/Header.css
+++ b/Anna_Tokareva/lesson_2/src/components/Header/Header.css
@@ -1,6 +1,6 @@
 .Header {
-  width: 100% - 60px;
-  padding: 20px 30px;
+  width: 90%;
+  padding: 1% 5%;
   text-align: center;
   font-size: 20px;
   background-color: lightskyblue;
