--- a/Anna_Puchkova/src/styles/styles.css
+++ b/Anna_Puchkova/src/styles/styles.css
@@ -20,13 +20,12 @@ body {
    padding: 5px 15px;
    border-radius: 20px;
    font-size: 18px;
-   margin: 5px 10px;
+   margin: 5px;
    align-self: flex-end;
 }
 .messageRobot {
    background-color: lightblue;
    align-self: flex-start;
-
 }
 
 .message-field {
@@ -35,7 +34,7 @@ body {
    background-color: #e2e2e2;
    height: 50%;
    width: 100%;
-   
+   padding: 20px;
    overflow-y: scroll;
 }
 .layout {
@@ -76,15 +75,13 @@ body {
 .header {
    width: 70%;
    height: 40px;
-   font-size: 16px;
+   font-size: 22px;
    font-weight: bold; 
    display: flex;
    align-items: center;
    flex-direction: row;
    justify-content: space-between;
    align-self: flex-end;
-   background-color: rgb(210, 238, 247);
-   box-sizing: border-box;
 }
 .deleteButtonDiv {
    display: flex;
@@ -124,36 +121,4 @@ font-size: 20px;
 padding: 5px 10px;
 border-radius: 5px;
 margin: 50px 0 0 0;
-}
-
-
-@media screen and (min-width: 650px){
-   .layout {
-       width: 50%;
-   }
-
-   .layout-canvas {
-       height: 50%;
-       width: 100%;
-       display: flex;
-   }
-
-   .layout-right-side {
-       width: 70%;
-   }
-
-   .layout-left-side {
-       display: block;
-       height: 100%;
-       width: 30%;
-       background-color: rgb(210, 238, 247);
-   }
-
-   .layout {
-       width: 50%;
-   }
-
-   .layout-canvas {
-       height: 50%;
-   }
 }
