--- a/Alexey_Bobkov/1-src/components/ChatList/ChatList.sass
+++ b/Alexey_Bobkov/1-src/components/ChatList/ChatList.sass
@@ -7,7 +7,8 @@
         padding: 5px
     .MuiListItem-gutters:hover
         background-color: #335070
-        
+    li:hover
+        color: red
         
         
 
