--- a/Alexey_Bobkov/1-src/components/ChatList/ChatList.sass
+++ b/Alexey_Bobkov/1-src/components/ChatList/ChatList.sass
@@ -9,7 +9,8 @@
         background-color: #335070
     li:hover
         color: red
-        
+    .deleteIcon:hover
+        color: #e47215
 .New-message
     -webkit-animation: color-change-5x 8s steps(2, end) infinite both
     animation: color-change-5x 8s steps(2, end) infinite both
