--- a/Alexey_Bobkov/1-src/components/Message/Message.sass
+++ b/Alexey_Bobkov/1-src/components/Message/Message.sass
@@ -6,4 +6,10 @@
     border-radius: 3px
     
 .Robot
-        align-self: flex-start
+    align-self: flex-start
+.MuiCircularProgress-root
+    align-self: center
+    margin-top: 10%
+    
+.MuiCircularProgress-colorPrimary
+    color: red !important
