added iphone notification

--- a/Roman_Balashov/react_project/src/components/ChatList/ChatList.css
+++ b/Roman_Balashov/react_project/src/components/ChatList/ChatList.css
@@ -24,7 +24,7 @@
 }
 
 @media screen and (max-width: 479px) {
-    .chatlist__item .chatlist__item_icon {
-        min-width: 10px;
+    .chatlist-wrap .chatlist__item {
+        padding: 0;
     }
 }
