--- a/Roman_Balashov/react_project/src/components/Header/Header.css
+++ b/Roman_Balashov/react_project/src/components/Header/Header.css
@@ -13,3 +13,9 @@
     margin-right: 10px;
     text-decoration: none;
 }
+
+@media screen and (max-width: 479px) {
+    .header {
+        justify-content: center;
+    }
+}
