+немного вертски + всплывающее окно + пуш уведомления

--- a/Alexey_Bobkov/1-src/components/ChatForm/ChatForm.sass
+++ b/Alexey_Bobkov/1-src/components/ChatForm/ChatForm.sass
@@ -5,11 +5,12 @@
     background-color: #cfe0f3
  
     .MuiTextField-root
-        margin:  15px
+        margin: 10px 1% 10px 1%
 
     .MuiButton-root
         margin: 5px
         padding: 5px
         height: 50%
         align-self: center
-        
+
+    
